Adding elements to document.

--- a/index.erb
+++ b/index.erb
@@ -6,6 +6,8 @@
     <%= javascript_include_tag @server.main %>
   </head>
   <body>
-    Hello!
+    <button id="btn-add">
+      Add
+    </button>
   </body>
 </html>
