Space: using View.find() to make Space no longer bound to the body element.

--- a/index.erb
+++ b/index.erb
@@ -9,6 +9,6 @@
           crossorigin="anonymous">
     <%= javascript_include_tag @server.main %>
   </head>
-  <body>
+  <body data-view="Space">
   </body>
 </html>
