Transferred Sheet instantiation from index.rb to index.erb

--- a/index.erb
+++ b/index.erb
@@ -10,5 +10,6 @@
     <%= javascript_include_tag @server.main %>
   </head>
   <body data-view="Space">
+    <div data-view="Sheet"></div>
   </body>
 </html>
