Transferred instantiation of Inspector to index.erb

--- a/index.erb
+++ b/index.erb
@@ -11,5 +11,6 @@
   </head>
   <body data-view="Space">
     <div data-view="Sheet"></div>
+    <div data-view="Inspector" style="width: 15em"></div>
   </body>
 </html>
