Setting docking_side of Inspector.

--- a/index.erb
+++ b/index.erb
@@ -11,6 +11,6 @@
   </head>
   <body data-view="Space">
     <div data-view="Sheet"></div>
-    <div data-view="Inspector" style="width: 15em"></div>
+    <div data-view="Inspector"  data-docking-side="right" style="width: 15em"></div>
   </body>
 </html>
