--- a/index.erb
+++ b/index.erb
@@ -10,6 +10,7 @@
     <%= javascript_include_tag @server.main %>
   </head>
   <body data-view="Space">
+    <div data-view="Palette"  data-docking-side="left" style="width: 15em"></div>
     <div data-view="Sheet"></div>
     <div data-view="Inspector"  data-docking-side="right" style="width: 15em"></div>
   </body>
