--- a/index.erb
+++ b/index.erb
@@ -11,7 +11,10 @@
   </head>
   <body data-view="Space">
     <div data-view="Palette" data-docking-side="left" style="width: 15em"></div>
-    <div data-view="Sheet"></div>
+    <div class="d-flex flex-column w-100">
+      <div data-view="Sheet"></div>
+      <div data-view="ConstraintEditor" data-docking-side="bottom" style="height: 10em"></div>
+    </div>
     <div data-view="Inspector" data-docking-side="right" style="width: 15em"></div>
   </body>
 </html>
